FIX added spacing between subsequent table-tabs in large dialogs

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -130,6 +130,7 @@ html.sap-tablet .sapMDialog, html.sap-desktop .sapMDialog {min-width: 25rem !imp
 .sapUxAPObjectPageSection.sapUiNoContentPadding .sapUiRespGrid.sapUiRespGridHSpace1>div:first-of-type {margin: 0; width: 100%}
 .sapUxAPObjectPageSection.sapUiNoContentPadding {margin-bottom: 1.5rem;}
 .exf-dialog-page.exf-dialog-filled .sapUxAPObjectPageSection.sapUiNoContentPadding {margin-bottom: 0;}
+.exf-dialog-page.exf-dialog-filled .sapUxAPObjectPageSection.sapUiNoContentPadding + .sapUxAPObjectPageSection.sapUiNoContentPadding{margin-top: 1rem;}
 
 /* DataLookupDialog */
 .sapMDialog > .sapMDialogSection > .sapMDialogScroll {height: 100%}
